Closed
Bug 265532
Opened 21 years ago
Closed 20 years ago
Missing Plugin placeholders missing from various pages
Categories
(Toolkit Graveyard :: Plugin Finder Service, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: u88484, Assigned: jst)
References
()
Details
(Keywords: fixed-aviary1.0, fixed1.7.5, regression, Whiteboard: see comment 12)
Attachments
(3 files)
|
164 bytes,
text/html
|
Details | |
|
1.34 KB,
patch
|
Details | Diff | Splinter Review | |
|
1.37 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
asa
:
approval-aviary+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1) Dont have flash and/or shockwave installed
2) Go to http://www.macromedia.com/shockwave/welcome/
3) The missing plugin placeholders are missing
Happens on various other sites as well..bug present for last couple of nightlys
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.3) Gecko/20041021 Firefox/1.0
Comment 1•21 years ago
|
||
I have flash installed but not shockwave. I can see the plugin bar on the top of
the page.
ya the bar shows, thats not what I'm talking about...I'm talking about the
placeholder box with the green puzzle piece icon is missing
Comment 3•21 years ago
|
||
It seems to be a general bug in firfox 1.0 PR. You can see the same thing with
gif images in this page :
http://www.volvo300mania.com/forum/posting.php?mode=smilies.
Comment 4•21 years ago
|
||
Updated•21 years ago
|
Flags: blocking-aviary1.0?
Updated•21 years ago
|
Assignee: doronr → jst
Comment 5•21 years ago
|
||
jst: this is a aviary regression from the previous behavior. Probably can be
considered a blocker.
Keywords: regression
| Assignee | ||
Comment 6•21 years ago
|
||
Yeah, I think I've got a fix...
| Assignee | ||
Comment 7•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #163462 -
Flags: superreview?(dbaron)
Attachment #163462 -
Flags: review?(dbaron)
Updated•21 years ago
|
Flags: blocking-aviary1.0? → blocking-aviary1.0+
| Assignee | ||
Comment 8•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #163463 -
Flags: superreview?(dbaron)
Attachment #163463 -
Flags: review?(dbaron)
| Assignee | ||
Updated•21 years ago
|
Attachment #163462 -
Flags: superreview?(dbaron)
Attachment #163462 -
Flags: review?(dbaron)
Comment on attachment 163463 [details] [diff] [review]
... and don't leak plugin error codes out of Reflow().
r+sr=dbaron, although the style thing should probably stay with the call to
CantRenderReplacedElement, assuming align="top", etc., do reasonable things to
the missing plugin icon.
Attachment #163463 -
Flags: superreview?(dbaron)
Attachment #163463 -
Flags: superreview+
Attachment #163463 -
Flags: review?(dbaron)
Attachment #163463 -
Flags: review+
Comment 10•21 years ago
|
||
Comment on attachment 163463 [details] [diff] [review]
... and don't leak plugin error codes out of Reflow().
a=asa for aviary checkin.
Attachment #163463 -
Flags: approval-aviary+
Comment 12•21 years ago
|
||
Er... Why is this the right fix? Last I checked, CantRenderReplacedElement
actually showed the alt text for an <embed> or <applet> and all (using the "alt"
attribute for <applet>, see bug 71473 / bug 114641, and using the contents of an
<embed>). Is there a reason we've decided not to show it?
Wouldn't the right fix be for CantRenderReplacedElement to leave the frame in
place when there is no alternate content or something, instead of just not
showing the site's desired fallback?
| Assignee | ||
Comment 13•21 years ago
|
||
Wanna hack up a fix? I don't, not now.
Comment 14•21 years ago
|
||
Maybe, yes (once I find the time to pull a branch tree and all that jazz). How
does the fix that was checked in behave with <applet> when java is disabled?
Does it show the fallback content, or the placeholder? Same for plugins
disabled in the Firefox preferences and <embed>. That's the case that really
worries me; the other instances are edge cases that probably aren't hit much.
Comment 15•21 years ago
|
||
Since this is reopened I would like to indicate that this bug should apply for
both <embed> or <object> when there is no alternative placeholder content.
Comment 16•21 years ago
|
||
I am not sure if this is the right bug or not, but in 1.0 PR, clicking on the
alternate content of an OBJECT tag would bring up the search for plugin dialog.
This shoud not be the case, because in some cases, the alternate content should
be clickable itself. For example, having a link inside of the alternate content.
I was doing some work with using images instead of flash content and this became
very anoying that, if I clicked on the image, the box that would search for an
appropriate plugin would come up.
Comment 17•21 years ago
|
||
> I am not sure if this is the right bug or not
It's not. ;)
> clicking on the alternate content of an OBJECT tag would bring up the search
That's fixed. See bug 264679.
Comment 18•21 years ago
|
||
vrfy'd fixed on linux fc2 using 2004102623-0.11 --now see the placeholder for
missing plugins.
Comment 19•21 years ago
|
||
Here's the real world example I was asked for of the <object> problem. I believe
it's broken here, but I don't have a machine to test with at the moment:
http://www.hyper.com/products/Professional/Tutorials/Rendering.htm
Mozilla trunk: works
Mozilla 1.73: broken
Aviary: broken?
You can't have Flash installed to show this problem, but you can always use the
simple test case attached to this bug to show it. There should be 2 puzzle piece
placeholders showing up in that example, not just 1.
Comment 20•21 years ago
|
||
Aaron: I tested this on Max OSX using today's build - Mozilla/5.0 (Macintosh; U;
PPC Mac OS X Mach-O; en-US; rv:1.7.3) Gecko/20041026 Firefox/1.0RC1.
I removed the Flash plugin. The page you reference shows only 1 puzzle piece
placeholder in the example (as long as you are not counting the one that shows
up at the top of the page where it let you know you are missing plugins)
(In reply to comment #19)
> Here's the real world example I was asked for of the <object> problem. I believe
> it's broken here, but I don't have a machine to test with at the moment:
> http://www.hyper.com/products/Professional/Tutorials/Rendering.htm
>
> Mozilla trunk: works
> Mozilla 1.73: broken
> Aviary: broken?
>
> You can't have Flash installed to show this problem, but you can always use the
> simple test case attached to this bug to show it. There should be 2 puzzle piece
> placeholders showing up in that example, not just 1.
Comment 21•21 years ago
|
||
Only one place holder viewing the simple test case on Windows Firefox too.
Comment 22•21 years ago
|
||
Clarification:
* Testcase should have 2 placeholders
* Real world websites should have 1 (when flash is removed):
http://www.hyper.com/products/Professional/Tutorials/Rendering.htm
Comment 23•21 years ago
|
||
First of all I do not see any place holder after clicking on the Simple testcase.
Secondly, can anyone confirm the following bug? When I middleclick this simple
testcase and then click on the "install missing plugin" button in the newly
opened tab, nothing happens.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.3) Gecko/20041026 Firefox/1.0
| Assignee | ||
Updated•21 years ago
|
Keywords: fixed1.7.5
Comment 24•21 years ago
|
||
Is this bug now irrelevant with the yellow bar at the top of the browser?
| Reporter | ||
Comment 25•21 years ago
|
||
The original bug was fixed but this was reopended because of
https://bugzilla.mozilla.org/show_bug.cgi?id=265532#c12 and the comments
following that
Updated•21 years ago
|
Whiteboard: see comment 12
| Reporter | ||
Comment 26•20 years ago
|
||
should this bug be closed and a new bug opened based on comment 12?
Comment 27•20 years ago
|
||
Either way, but whatever you file make sure it depends on bug 1156
Depends on: 1156
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Product: Firefox → Toolkit
Updated•11 years ago
|
Product: Toolkit → Toolkit Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•