Fixing bug 265532. Don't try to render replacement content for non-object plugin elements. r+sr=dbaron@dbaron.org, a=asa@mozilla.org